--- a/app/src/main/res/layout/dialog_hongbao.xml
+++ b/app/src/main/res/layout/dialog_hongbao.xml
@@ -1,12 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             android:orientation="vertical">
+
+
     <Button
         android:id="@+id/btn_hongbao"
-        android:background="#00000000"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="30dp"
+        android:background="#00000000"/>
 
-</LinearLayout>
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:src="@mipmap/avt"
+        />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        >
+
+
+        <com.young.jdmall.ui.view.GuaGuaKa
+
+            android:id="@+id/guaGuaLeView"
+            android:layout_width="200dp"
+            android:layout_height="50dp"/>
+
+        />
+
+
+    </RelativeLayout>
+
+
+</FrameLayout>
