--- a/app/src/main/res/layout/activity_account_setting.xml
+++ b/app/src/main/res/layout/activity_account_setting.xml
@@ -55,8 +55,8 @@
 
                 <ImageView
                     android:id="@+id/iv_signOrReg"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="10dp"
                     android:background="@mipmap/b17"/>
