--- a/app/src/main/res/layout/item_all_order.xml
+++ b/app/src/main/res/layout/item_all_order.xml
@@ -43,7 +43,7 @@
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_margin="8dp"
-            android:src="@mipmap/goods2"/>
+            android:src="@mipmap/default_pic"/>
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
@@ -79,11 +79,24 @@
             android:id="@+id/tv_desc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"
             android:text="描述"/>
        <TextView
+           android:layout_marginRight="10dp"
+           android:layout_centerVertical="true"
            android:id="@+id/tv_pay"
            android:layout_alignParentRight="true"
+            android:text="价格"
+           android:textColor="@color/red"
+            android:textSize="20sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:layout_marginRight="8dp"
+            android:layout_toLeftOf="@id/tv_pay"
+            android:layout_centerVertical="true"
             android:text="实付款："
 
             android:layout_width="wrap_content"
