--- a/app/src/main/res/layout/type_popup_window1.xml
+++ b/app/src/main/res/layout/type_popup_window1.xml
@@ -1,89 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+              android:orientation="vertical">
 
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
         <Button
-            android:text="东风"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"/>
+            style="@style/TypePopWindowBtnStyle"
+            android:text="东风"/>
+
         <Button
-            android:text="西风"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"/>
+            style="@style/TypePopWindowBtnStyle"
+            android:text="西风"/>
+
         <Button
-            android:text="南风"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"/>
+            style="@style/TypePopWindowBtnStyle"
+            android:text="南风"/>
+
         <Button
-            android:text="北风"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"/>
+            style="@style/TypePopWindowBtnStyle"
+            android:text="北风"/>
     </LinearLayout>
 
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
         <Button
-            android:text="顺丰"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"/>
+            style="@style/TypePopWindowBtnStyle"
+            android:text="顺丰"/>
+
         <Button
-            android:text="逆丰"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"/>
+            style="@style/TypePopWindowBtnStyle"
+            android:text="逆丰"/>
+
         <Button
-            android:text="强丰"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"/>
+            style="@style/TypePopWindowBtnStyle"
+            android:text="强丰"/>
+
         <Button
-            android:text="弱丰"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"/>
+            style="@style/TypePopWindowBtnStyle"
+            android:text="弱丰"/>
     </LinearLayout>
+
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <Button
-            android:text="天天"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"/>
-        <Button
-            android:text="日日"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"/>
-        <Button
-            android:text="夜夜"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
         <Button
-            android:background="#ffffff"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"/>
+            style="@style/TypePopWindowBtnStyle"
+            android:text="天天"/>
+
+        <Button
+            style="@style/TypePopWindowBtnStyle"
+            android:text="日日"/>
+
+        <Button
+            style="@style/TypePopWindowBtnStyle"
+            android:text="夜夜"/>
+
+        <Button
+            style="@style/TypePopWindowBtnStyle"
+            android:background="#ffffff"/>
 
 
     </LinearLayout>
-
 
 
 </LinearLayout>
