--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -44,12 +44,31 @@
     <!--自定义Dialog样式-->
     <style name="Dialog" parent="android:style/Theme.Dialog">
         <!-- 第一个是dialog的背景色，当然你可以设置图片，不拦大家 -->
-        <item name="android:background">@mipmap/hongbao</item>
+        <item name="android:background">#00000000</item>
         <!-- 第二个就是弹出dialog后，下面的activity层的颜色啦-->
         <item name="android:windowBackground">@android:color/transparent</item>
         <!--这里设置为没有标题栏，如果这里不设置的话，你会发现无论布局怎么改都会出现多一栏白色 -->
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowFrame">@null</item><!--边框-->
+    </style>
+
+
+
+    android:clickable="true"
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:layout_margin="3dp"
+    android:layout_weight="1"
+    android:background="@drawable/type_popwindow_btn_selector"
+    android:text="蕾丝"
+
+    <style name="TypePopWindowBtnStyle">
+        <item name="android:clickable">true</item>
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_margin">3dp</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:background">@drawable/type_popwindow_btn_selector</item>
     </style>
 
 
