--- a/app/src/main/res/layout/item_type_list.xml
+++ b/app/src/main/res/layout/item_type_list.xml
@@ -20,6 +20,7 @@
         android:layout_height="wrap_content">
 
         <TextView
+            android:textSize="22sp"
             android:id="@+id/item_type_name"
             android:ellipsize="end"
             android:maxLines="2"
