--- a/app/src/main/res/layout/item_all_order.xml
+++ b/app/src/main/res/layout/item_all_order.xml
@@ -33,7 +33,7 @@
     </RelativeLayout>
 
     <LinearLayout
-
+        android:id="@+id/ll_detail"
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:background="#f4f1f1">
